add static files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
-
 }
 
 android {
@@ -14,9 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.orderfoodappforenterprise"
-        multiDexEnabled true
-        android.defaultConfig.vectorDrawables.useSupportLibrary = true
-        minSdkVersion 17
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -51,15 +48,16 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     implementation 'com.android.support:multidex:1.0.3'
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:28.0.1')
 
-    // Add the dependency for the Firebase SDK for Google Analytics
-    // When using the BoM, don't specify versions in Firebase dependencies
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // Declare the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
 
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
@@ -67,31 +65,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    implementation 'com.google.firebase:firebase-database:20.0.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
+    implementation 'com.google.firebase:firebase-database:20.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    //material design
-    implementation 'com.google.android.material:material:1.2.0-alpha02'
-
-    //Gif component
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
-
-    implementation 'com.android.support:multidex:1.0.3'
-
-    //swipe action on cart item
-    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
-
-
-    //Add gif image
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
-    //load image from an available URL
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-    implementation 'com.google.maps:google-maps-services:0.2.5'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 }
