--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.5.10"
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -18,8 +19,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+         // Warning: this repository is going to shut down soon
     }
 }
 
