--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.1.0'
 
+    //swipe action on cart item
+    implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
+
     implementation 'com.google.android.material:material:1.3.0'
 
 }
