--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.8'
 
@@ -21,6 +21,9 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven{
+            url "https://jitpack.io"
+        }
          // Warning: this repository is going to shut down soon
     }
 }
