--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,5 +113,6 @@ dependencies {
         exclude group: 'com.google.android.gms'
         exclude group: 'androidx.appcompat'
     }
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
 }
